# 3DRenderer

./: CMakeLists.txt  Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Gl.cpp  Gl.h  Hittable.h  HittableList.cpp  HittableList.h  Interval.cpp  Interval.h  Light.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Model.cpp  Model.h  Object.h  Ray.cpp  Ray.h  Rt.cpp  Rt.h  Sphere.cpp  Sphere.h  Vec2.h  Vec3.h  imgui.ini  main.cpp
imgui/: imgui.cpp  imgui.h  imgui_widgets.cpp
